# how-projeto-final

./: .gitignore  LICENSE  README.md  proposta-projeto.odt  pyproject.toml
how_dcb_data_lake/: constants.py  functions.py
how_dcb_data_lake/bronze/: main.py
how_dcb_data_lake/gold/: main.py
how_dcb_data_lake/silver/: functions.py  main.py
tests/: test_how_projeto_final.py
