[tool.poetry]
name = "projeto_final"
version = "0.1.0"
description = ""
authors = ["Daniele <danicbeltrao@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
requests = "2.23.0"
awswrangler = "^2.16.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
